--- a/views/menu.html
+++ b/views/menu.html
@@ -12,26 +12,26 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <li><a href="./../index.html">Aula 01 - Conhecendo o Vue.js</a></li>
-          <li><a href="./../aula-02.html">Aula 02 - O que são diretivas no Vue.js?</a></li>
-          <li><a href="./../aula-03.html">Aula 03 - Diretiva v-for e suas peculiaridades</a></li>
-          <li><a href="./../aula-04.html">Aula 04 - Diretiva v-model, interligando formulários e dados</a></li>
-          <li><a href="./../aula-05.html">Aula 05 - Diretiva v-bind, atribuindo valor às tags html</a></li>
-          <li><a href="./../aula-06.html">Aula 06 - Diretiva v-on, manipulando eventos</a></li>
-          <li><a href="./../aula-07.html">Aula 07 - Filters, formatando textos</a></li>
-          <li><a href="./../aula-08.html">Aula 08 - Computed e watch e suas peculiaridades</a></li>
-          <li><a href="./../aula-09.html">Aula 09 - </a></li>
-          <li><a href="./../aula-10.html">Aula 10 - </a></li>
-          <li><a href="./../aula-11.html">Aula 11 - </a></li>
-          <li><a href="./../aula-12.html">Aula 12 - </a></li>
-          <li><a href="./../aula-13.html">Aula 13 - </a></li>
-          <li><a href="./../aula-14.html">Aula 14 - </a></li>
-          <li><a href="./../aula-15.html">Aula 15 - </a></li>
-          <li><a href="./../aula-16.html">Aula 16 - </a></li>
-          <li><a href="./../aula-17.html">Aula 17 - </a></li>
-          <li><a href="./../aula-18.html">Aula 18 - </a></li>
-          <li><a href="./../aula-19.html">Aula 19 - </a></li>
-          <li><a href="./../aula-20.html">Aula 20 - </a></li>
+          <a href="index.html">Aula 01 - Conhecendo o Vue.js</a>
+          <a href="aula-02.html">Aula 02 - O que são diretivas no Vue.js?</a>
+          <a href="aula-03.html">Aula 03 - Diretiva v-for e suas peculiaridades</a>
+          <a href="aula-04.html">Aula 04 - Diretiva v-model, interligando formulários e dados</a>
+          <a href="aula-05.html">Aula 05 - Diretiva v-bind, atribuindo valor às tags html</a>
+          <a href="aula-06.html">Aula 06 - Diretiva v-on, manipulando eventos</a>
+          <a href="aula-07.html">Aula 07 - Filters, formatando textos</a>
+          <a href="aula-08.html">Aula 08 - Computed e watch e suas peculiaridades</a>
+          <!-- <li><a href="aula-09.html">Aula 09 - </a> -->
+          <!-- <li><a href="aula-10.html">Aula 10 - </a> -->
+          <!-- <li><a href="aula-11.html">Aula 11 - </a> -->
+          <!-- <li><a href="aula-12.html">Aula 12 - </a> -->
+          <!-- <li><a href="aula-13.html">Aula 13 - </a> -->
+          <!-- <li><a href="aula-14.html">Aula 14 - </a> -->
+          <!-- <li><a href="aula-15.html">Aula 15 - </a> -->
+          <!-- <li><a href="aula-16.html">Aula 16 - </a> -->
+          <!-- <li><a href="aula-17.html">Aula 17 - </a> -->
+          <!-- <li><a href="aula-18.html">Aula 18 - </a> -->
+          <!-- <li><a href="aula-19.html">Aula 19 - </a> -->
+          <!-- <li><a href="aula-20.html">Aula 20 - </a> -->
         </div>
       </div>
     </div>
